overflow bug on space ventures section fixed

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -185,6 +185,7 @@ section {
   max-width: 100%;
   flex-direction: column;
   align-items: center;
+  overflow-y: scroll;
 }
 
 .col1 {
